# SatelliteVisibility

./: .gitignore  CMakeLists.txt  README.md  main.c  nasabare.txt
include/: input.h  satellite.h  tle.h
src/: input.c  satellite.c  tle.c
